--- a/webcam-photo-sharer/frontend.kv
+++ b/webcam-photo-sharer/frontend.kv
@@ -2,12 +2,16 @@
     GridLayout:
         cols: 1
         Camera:
+            id: camera
             resolution: (640,480)
-            play: True
+            play: False
         Button:
+            id : camera_button
             text: 'Start Camera'
+            on_press: root.start() if root.ids.camera.play == False else root.stop()
         Button:
             text: 'Capture'
+            on_press : root.capture()
 
 <RootWidget>:
     CameraScreen
