--- a/webcam-photo-sharer/frontend.kv
+++ b/webcam-photo-sharer/frontend.kv
@@ -13,7 +13,27 @@
             text: 'Capture'
             on_press : root.capture()
 
+<ImageScreen>:
+    GridLayout:
+        cols: 1
+        Image: img
+        Button:
+            text: 'Create Sharable Link'
+            on_press: root.create_link()
+        Label:
+            id : link
+            text: ''
+        GridLayout:
+            cols: 2
+            Button:
+                text: 'Copy Link'
+            Button:
+                text: 'Open Link'
+
 <RootWidget>:
     CameraScreen
         id: camera_screen
         name: 'camera_screen'
+    ImageScreen:
+        id: image_screen
+        name: 'image_screen'
